working on mobile, fixed BR issuegit add .!

--- a/style.css
+++ b/style.css
@@ -111,6 +111,8 @@ body {
 
 td {
   height: 1px;
+  padding-right: 0px;
+  margin-right: 0px;
 }
 
 table {
@@ -143,6 +145,8 @@ height: 1px;
 
 .nameDisplay {
   height: 1px;
+  padding-right: 0px;
+  margin-right: 0px;
 }
 
 
